# seis-proc-db

./: .gitignore  README.md  config.py  pyproject.toml  seisprocdb_tables.py
app/: database.py  services.py  tables.py
db/: build_tables.py  drop_tables.py
scripts/: add_locs.py  add_stations_channels.py  build_assoc_plus_tables.py  build_tables.py  build_uuss_ev_arr_tables.py  build_waveforms_blob.py  drop_assoc_plus_tables.py  drop_rows_by_date.py  drop_tables.py  drop_uuss_ev_arr_tables.py  insert_uuss_catalogs.py  remove_wf_files.py  time_get_wf_stor_num.py
src/seis_proc_db/: config.py  database.py  pytables_backend.py  services.py  tables.py
src/seis_proc_db.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_pytables_backend.py  test_services.py  test_tables.py
